Fixed controls not showing.

--- a/src/map/map.module.css
+++ b/src/map/map.module.css
@@ -34,3 +34,10 @@
     border-radius: 2.5px;
     box-shadow:0 1px 1px rgba(0, 0, 0, 0.5);
 }
+
+.videoSource {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1 !important;
+}
